--- a/first-website/first-website.html
+++ b/first-website/first-website.html
@@ -12,7 +12,7 @@
 
         <main>
           <div class="sidebar">
-            <img src="blob:chrome-untrusted://media-app/ebea1cce-9fc3-4e66-ba78-2548791993e0"
+            <img src="https://share.snapchat.com/m/UG8_CQ5y?share_id=fUwKxDnYTFmqxo4JuoF46w&locale=en_US"
         
           </div>
       
